fix: 발행요청서 작성 API 응답 및 로직버그 수정